--- a/changelog
+++ b/changelog
@@ -1,8 +1,10 @@
-virt-back (0.1.0-2) UNRELEASED; urgency=medium
+virt-back (0.1.0-4) unstable; urgency=medium
 
   * Forget python-libvirt runtine dependency 
+  * add missing man page 
+  * add ALL the necessary file to bundle man page
 
- -- Lionel Felicite <lfelicite@clever-age.com>  Thu, 28 May 2015 16:27:31 +0200
+ -- Lionel Felicite <lfelicite@clever-age.com>  Mon, 08 Jun 2015 12:08:23 +0200
 
 virt-back (0.1.0-1) unstable; urgency=low
 
